# libertine

./: .bzrignore  CMakeLists.txt  README.md  snapcraft.yaml
cmake/: ListOperations.cmake  UseGObjectIntrospection.cmake
common/: CMakeLists.txt  ContainerAppsList.cpp  ContainerAppsList.h  ContainerArchivesList.cpp  ContainerArchivesList.h  ContainerBindMountsList.cpp  ContainerBindMountsList.h  ContainerConfig.cpp  ContainerConfigList.cpp  ContainerConfigList.h  ContainerManager.cpp  ContainerManager.h  ContainerOperationDetails.cpp  ContainerOperationDetails.h  ContainersConfig.cpp  ContainersConfig.h  LibertineConfig.cpp  LibertineConfig.h  PackageOperationDetails.cpp  PackageOperationDetails.h
data/: CMakeLists.txt  com.canonical.libertine.ContainerManager.service  com.canonical.libertine.LxcManager.service  com.canonical.libertine.LxdManager.service  com.canonical.libertine.Service.service  libertine-lxc-manager.conf  libertine-lxc-sudo  libertine-lxc.conf  libertine-lxd-sudo  libertine-manager-app.desktop  libertine-tools.click-hook.in  libertine-xmir.conf  libertine.desktop  libertine.service  puritine-click.conf  replace-libertine-scope.conf  snap-runner.wrapper
data/demo/: CMakeLists.txt
data/demo/desktop_files/: CMakeLists.txt  puritine_firefox_0.0.desktop.in  puritine_gedit_0.0.desktop.in  puritine_gimp_0.0.desktop.in  puritine_libreoffice-startcenter_0.0.desktop.in  puritine_xchat-gnome_0.0.desktop.in  trusty_firefox_0.0.desktop.in  trusty_gedit_0.0.desktop.in  trusty_gimp_0.0.desktop.in  trusty_libreoffice-startcenter_0.0.desktop.in  trusty_xchat-gnome_0.0.desktop.in
debian/: changelog  control  copyright  files  gir1.2-libertine.install  libertine-demo.install  libertine-demo.lintian-overrides  libertine-manager-app.install  libertine-qt-common.install  libertine-tools.install  libertine-xmir-tools.install  libertine.install  libertined.install  libertined.preinst  libertined.prerm  liblibertine-dev.install  liblibertine1.install  liblibertine1.symbols  python3-libertine-chroot.install  python3-libertine-lxc.install  python3-libertine-lxd.install  python3-libertine.install  rules  ubuntu-system-settings-libertine.install
libertine/: CMakeLists.txt  ContainerAppsList.cpp  ContainerAppsList.h  ContainerArchivesList.cpp  ContainerArchivesList.h  ContainerConfig.cpp  ContainerConfig.h  ContainerConfigList.cpp  ContainerConfigList.h  ContainerManager.cpp  ContainerManager.h  LibertineConfig.cpp  LibertineConfig.h  LibertineContainerTools.py  PasswordHelper.cpp  PasswordHelper.h  config.h.in  dbus-session-bridge  libertine-container-manager  libertine.cpp  libertine.h  libertine_common.cpp  libertine_common.h  libertine_container_manager_cli.cpp  libertine_lxc_manager_wrapper.cpp  libertine_lxc_manager_wrapper.h  main.cpp
libertine/qml/: AddExtraArchiveView.qml  AppAddView.qml  ConfigureContainer.qml  ContainerApps.qml  ContainerConfig.qml  ContainerInfoView.qml  ContainerManager.qml  ContainerOptionsDialog.qml  ContainerPasswordDialog.qml  ContainersView.qml  DebianPackagePicker.qml  ExtraArchivesView.qml  GenericErrorDialog.qml  HomeView.qml  ImageSource.qml  ManageContainer.qml  PackageExistsDialog.qml  PackageInfoView.qml  PackageOperationFailureDialog.qml  PasswordView.qml  PreparingContainerView.qml  SearchPackagesDialog.qml  SearchResults.qml  SearchResultsView.qml  WelcomeView.qml  image_sources.js  libertine.qml  welcomeview.qml
liblibertine/: CMakeLists.txt  libertine.cpp  libertine.h  libertine.pc.in  libertined.cpp  libertined.h
parts/plugins/: utils.py  x-libertine-deps.py
pasted/: CMakeLists.txt  pasted.cpp  pasted.h
po/: CMakeLists.txt  POTFILES.in.in  ca.po  cs.po  de.po  en_GB.po  en_US.po  es.po  fi.po  fr.po  it.po  ja.po  ko.po  libertine.pot  lt.po  nl.po  pl.po  pt.po  ru.po  sc.po  zh_Hans.po  zh_Hant.po  zh_Hant_HK.po
python/: CMakeLists.txt
python/libertine/: AppDiscovery.py  ChrootContainer.py  Client.py  ContainerControlClient.py  ContainersConfig.py  HostInfo.py  Libertine.py  LxcContainer.py  LxdContainer.py  __init__.py  utils.py
qml/: CMakeLists.txt
qml/common/: AddBindMountDialog.qml  AddExtraArchiveView.qml  ContainerEditView.qml  ContainerInfoView.qml  ContainerOptionsDialog.qml  (+11 more)
snap/: snap-runner.wrapper
system-settings-plugin/: CMakeLists.txt  config.h.in  libertine.settings.in  plugin.cpp  plugin.h
tests/integration/: CMakeLists.txt  test_libertine_service.py  test_liblibertine.cpp
tests/integration/data/libertine/: ContainersConfig.json
tests/unit/: CMakeLists.txt  ContainerConfigListTests.cpp  ContainerConfigTests.cpp  ContainersConfigTests.cpp  LibertineCommonTests.cpp  libertine_launch_tests.py  libertine_logger_tests.py  libertine_public_gir_tests.py  libertine_session_bridge_tests.py  pytest.ini  test_app_discovery.py  test_launcher.py  test_launcher_with_dbus.py  test_libertine_container.py  test_libertine_container_manager.py  test_libertine_gir.py  test_logger.py  test_session_bridge.py  test_sockets.py
tests/unit/libertine-config/libertine/: ContainersConfig.json
tests/unit/service/: CMakeLists.txt  test_apt.py  test_container.py  test_operations_monitor.py  test_task_dispatcher.py
tests/unit/service/tasks/: CMakeLists.txt  test_app_info_task.py  test_container_info_task.py  test_create_task.py  test_destroy_task.py  test_install_task.py  test_list_app_ids_task.py  test_list_apps_task.py  test_list_task.py  test_remove_task.py  test_search_task.py  test_update_task.py
tools/: CMakeLists.txt  create_bespoke_container  create_bespoke_container.sh  dbus-session-bridge  libertine-container-manager  libertine-container-manager.1  libertine-launch  libertine-launch.1  libertine-lxc-manager  libertine-lxc-manager.1  libertine-lxc-setup  libertine-lxd-manager  libertine-lxd-manager.1  libertine-lxd-setup  libertine-session-bridge  libertine-session-bridge.1  libertine-shell  libertine-shell.1  libertine-xmir  libertine-xmir.1  libertined  update-puritine-containers
tools/bash_completion.d/: libertine-container-manager
tools/completions/: libertine-container-manager  libertine-shell
(+43 files in other folders)
